# openauto-rk3229-armbian

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  audio-setup.sh  build.sh  preview.qmlproject  preview.qmlproject.qtds
assets/: qmldir  resources.qrc
assets/qml/: FileBrowserPage.qml  HomePage.qml  Main.qml  MusicPage.qml  SettingsPage.qml  Theme.qml  qmldir
assets/qml/components/: BottomDock.qml  SettingsCard.qml  StatusBar.qml  TileButton.qml  VolumeOverlay.qml
include/f1x/openauto/autoapp/: App.hpp
include/f1x/openauto/autoapp/Configuration/: Configuration.hpp  IConfiguration.hpp
include/f1x/openauto/autoapp/Player/: AudioPlayer.hpp  FileBrowserBackend.hpp
include/f1x/openauto/autoapp/Projection/: AudioDeviceList.hpp  FFmpegDrmVideoOutput.hpp  KmssinkVideoOutput.hpp  LockFreeRingBuffer.hpp  RtAudioInput.hpp  RtAudioOutput.hpp
include/f1x/openauto/autoapp/UI/: SettingsWindow.hpp  UIBackend.hpp
packaging/: bash_profile  eglfs.json
packaging/debian/: postinst  postrm  prerm
packaging/opt/crankshaft/: usb_action.sh
packaging/systemd/: openauto.service
src/autoapp/: App.cpp  autoapp.cpp
src/autoapp/Configuration/: Configuration.cpp
src/autoapp/Player/: AudioPlayer.cpp  FileBrowserBackend.cpp
src/autoapp/Projection/: AudioDeviceList.cpp  FFmpegDrmVideoOutput.cpp  InputDevice.cpp  KmssinkVideoOutput.cpp  RtAudioInput.cpp  RtAudioOutput.cpp
src/autoapp/Service/: ServiceFactory.cpp
src/autoapp/UI/: MainWindow.cpp  SettingsWindow.cpp  UIBackend.cpp  settingswindow.ui
src/btservice/: AndroidBluetoothServer.cpp
tests/mocks/: MockConfiguration.hpp
tests/unit/: ConfigurationTests.cpp  ProjectionTests.cpp
